--- a/src/Chatbutton.css
+++ b/src/Chatbutton.css
@@ -7,7 +7,7 @@
     width: 50px;
     height: 50px;
     /* Change the background color as needed */
-    background-color: antiquewhite;
+    background-color: rgb(7, 50, 68);
     border-radius: 50%;
     display: flex;
     align-items: center;
